<resources>
    <string name="app_name">CourseTable</string>
    <string name="action_settings">Settings</string>
    <string name="title">我的课程表</string>
    <string name="mon">Mon</string>
    <string name="tues">Tues</string>
    <string name="wen">Wen</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="fourth">4th</string>
    <string name="fifth">5th</string>
    <string name="sixth">6th</string>
    <string name="seventh">7th</string>
    <string name="eghith">8th</string>
</resources>
